[package]
name = "dmc-dsg-miner-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cyfs-base= {path="../../../CYFS/src/component/cyfs-base"}
cyfs-lib = {path="../../../CYFS/src/component/cyfs-lib"}
cyfs-chunk-lib = {path="../../../CYFS/src/component/cyfs-chunk-lib"}
cyfs-util = {path="../../../CYFS/src/component/cyfs-util"}
cyfs-debug = {path="../../../CYFS/src/component/cyfs-debug"}
cyfs-core = {path="../../../CYFS/src/component/cyfs-core"}

dmc-dsg-base = {path="../dmc-dsg-base"}
async-std ={ version = "1.8", features = ["std"]}
clap = "2.34.0"
log = "=0.4"
config = "0.13"
dirs = "4.0.0"
serde = "1.0.137"
serde_json = "1.0.81"
