[package]
name = "dmc-dsg-miner-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cyfs-base= "0.6"
cyfs-lib = "0.8"
cyfs-chunk-lib = "0.6"
cyfs-util = "0.6"
cyfs-debug = "0.6"
cyfs-core = "0.6"

dmc-dsg-base = {path="../dmc-dsg-base"}
async-std ={ version = "1.8", features = ["std"]}
clap = "2.34.0"
log = "=0.4"
config = "0.13"
dirs = "4.0.0"
serde = "1.0.137"
serde_json = "1.0.81"
