[package]
name = "dmc-dsg-miner"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmc-dsg-base = {path = "../dmc-dsg-base"}

cyfs-base= {path="../../CYFS/src/component/cyfs-base"}
cyfs-lib = {path="../../CYFS/src/component/cyfs-lib"}
cyfs-chunk-lib = {path="../../CYFS/src/component/cyfs-chunk-lib"}
cyfs-util = {path="../../CYFS/src/component/cyfs-util"}
cyfs-debug = {path="../../CYFS/src/component/cyfs-debug"}
cyfs-core = {path="../../CYFS/src/component/cyfs-core"}
cyfs-task-manager = {path="../../CYFS/src/component/cyfs-task-manager"}
cyfs-bdt  = {path="../../CYFS/src/component/cyfs-bdt"}
cyfs-dsg-client = {path="../../CYFS/src/component/cyfs-dsg-client"}

async-std = { version = "1.8.0", features = ["attributes"] }
tide = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13.0"
sha2 = "0.10"
hex = "0.4.3"
http = "0.2.5"
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.5", features = ["runtime-async-std-rustls", "mysql", "macros" ] }
once_cell = "1.9"
serde_json = "1.0"
reqwest = "0.11"
aes = "0.7.5"
block-modes = "0.8.1"
hex-literal = "0.3.4"
askama = "0.10"
log = "=0.4"
calamine = "0.18"
tempfile = "3"
async-trait = "0.1.53"
async-recursion = "1"
url = "2.2.2"
toml = "0.5"
regex = "1.5.5"
json = "0.12.4"
libsecp256k1 = "0.7.0"
base58 = "0.2.0"
rand = "0.8.5"
ripemd = "0.1.1"
chrono = "0.4.19"
flate2 = "1.0.23"
md5 = "0.7.0"
async-h1 = "2.3.3"
generic-array = "0.12"
memmap2 = "0.5.5"
config = "0.13.1"

prost = {version = "0.9"}

[build-dependencies]
prost-build = {version = "0.9"}
